--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ div.container {
     position: absolute;
     top: 0;
     
+    z-index: -1;
     overflow: hidden;
 
 }
@@ -144,6 +145,7 @@ button:active {
     position: absolute;
     bottom: 0;
 
+    z-index: -1;
     overflow: hidden;
 
 }
@@ -179,7 +181,7 @@ button:active {
     }
     div.rocketImage {
 
-        padding: 0 1rem 0 1rem;
+        padding: 0 3rem 0 3rem;
         padding-top: 3.158479886800081rem;
 
     }
